# ai-media-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  setup.sh
.github/workflows/: pre_commit_checks.yaml
ai_media_generator/: main.py  utils.py
tests/: test_main.py
